tests/parser/parse-type.3.bad.error
error: Malformed type
  --> test:4:14
   |
 4 |  (declare f (T :a =>))
   |                ^^ missing type after `=>`
